--- a/admin/pages/examples/payment.html
+++ b/admin/pages/examples/payment.html
@@ -126,7 +126,7 @@
   <!-- Main Sidebar Container -->
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="index3.html" class="brand-link">
+    <a href="../../../index.html" class="brand-link">
       <img src="../../dist/img/Masar.png" alt="AdminLTE Logo" class="brand-image">
       <span class="brand-text font-weight-light" style="opacity: 0;">.</span>
     </a>
@@ -200,19 +200,19 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="./tables/showServices.html" class="nav-link">
+                <a href="../tables/showServices.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>عرض الخدمات</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="./tables/support.html" class="nav-link">
+                <a href="../tables/support.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>الدعم</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="./tables/timeline.html" class="nav-link">
+                <a href="../tables/timeline.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>متابعة الخطط</p>
                 </a>
