--- a/admin/pages/tables/showServices.html
+++ b/admin/pages/tables/showServices.html
@@ -125,7 +125,7 @@
   <!-- Main Sidebar Container -->
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="index3.html" class="brand-link">
+    <a href="../../../index.html" class="brand-link">
       <img src="../../dist/img/Masar.png" alt="AdminLTE Logo" class="brand-image">
       <span class="brand-text font-weight-light" style="opacity: 0;">.</span>
     </a>
