--- a/payment.html
+++ b/payment.html
@@ -44,136 +44,140 @@
 
   <!--=============== SIDEBAR ===============-->
   <aside class="sidebar" id="sidebar">
-      <div class="sidebar-container">
-         <div class="logo d-flex justify-content-between align-items-center">
-          <span class="toggle-sidebar"><i class="fa-solid fa-arrow-left fa-sm"></i></span>    
-              <img src="asstesClient/imag/Masar.png" alt="" class="sidebar__logo-text">
-         </div>
+    <div class="sidebar-container">
+       <div class="logo d-flex justify-content-between align-items-center">
+        <span class="toggle-sidebar"><i class="fa-solid fa-arrow-left fa-sm"></i></span>    
+            <img src="asstesClient/imag/Masar.png" alt="" class="sidebar__logo-text">
+       </div>
 
-         <div class="sidebar-content">
-            <div class="sidebar-list">
-              <a href="#" class="sidebar-link active-link">
-                  <i class="fa-solid fa-house"></i>
-                  <span class="sidebar-link-name" data-i18n="Home"></span>
-               </a>
+       <div class="sidebar-content">
+          <div class="sidebar-list">
+            <a href="./index.html" class="sidebar-link">
+                <i class="fa-solid fa-house"></i>
+                <span class="sidebar-link-name" data-i18n="Home"></span>
+             </a>
 
-               <a href="service.html" class="sidebar-link">
-                  <i class="fa-solid fa-hand-holding-heart"></i>
-                  <span class="sidebar-link-name" data-i18n="Services"></span>
-               </a>
-               
-               <a href="#" class="sidebar-link">
-                  <i class="fa-solid fa-coins"></i>
-                  <span class="sidebar-link-name" data-i18n="Payment"></span>
-               </a>
+             <a href="./service.html" class="sidebar-link">
+                <i class="fa-solid fa-hand-holding-heart"></i>
+                <span class="sidebar-link-name" data-i18n="Services"></span>
+             </a>
+             
+             <a href="./payment.html" class="sidebar-link active-link">
+                <i class="fa-solid fa-coins"></i>
+                <span class="sidebar-link-name" data-i18n="Payment"></span>
+             </a>
 
-               <a href="#" class="sidebar-link">
-                  <i class="fa-solid fa-circle-exclamation"></i>
-                  <span class="sidebar-link-name" data-i18n="About"></span>
-               </a>
+             <a href="./about-us.html" class="sidebar-link">
+                <i class="fa-solid fa-circle-exclamation"></i>
+                <span class="sidebar-link-name" data-i18n="About"></span>
+             </a>
 
-               <a href="#" class="sidebar-link">
-                  <i class="fa-solid fa-square-phone"></i>
-                  <span class="sidebar-link-name" data-i18n="contact"></span>
-               </a>
-            </div>
-
-            <h3 class="sidebar-title">
-               <span data-i18n="General"></span>
-            </h3>
-
-            <div class="sidebar-list">
-               <a href="#" class="sidebar-link">
-                  <i class="fa-solid fa-lock"></i>
-                  <span class="sidebar-link-name" data-i18n="Privacy"></span>
-               </a>
-
-               <a href="#" class="sidebar-link">
-                  <i class="fa-solid fa-gear"></i>
-                  <span class="sidebar-link-name" data-i18n="Settings"></span>
-               </a>
-
-               <a href="#" class="sidebar-link">
-                  <i class="fa-solid fa-arrow-right-from-bracket"></i>
-                  <span class="sidebar-link-name" data-i18n="Logout"></span>
-               </a>
-            </div>
-         </div>
-
-         <div class="sidebar-account">
-            <img src="asstesClient/imag/user.png" alt="sidebar image" class="sidebar-perfil">
-
-            <div class="sidebar-names">
-               <h3 class="sidebar-name">Will Lens</h3>
-               <span class="sidebar-email">willens@email.com</span>
-            </div>
-
-            <i class="ri-arrow-right-s-line"></i>
-         </div>
-      </div>
-  </aside>
-   
-  <!-- Navbar -->
-  <nav id="navbar">
-      <div class="container">
-          <div class="rowNav">
-              <!-- logo -->
-              <a href="index.html" class="logo">
-                  <img src="asstesClient/imag/Masar.png" alt="">
-              </a>
-              <!-- content nav -->
-              <ul class="item-nav d-none d-lg-flex">
-                  <li><a href="index.html" data-i18n="Home">Home</a></li>
-                  <li><a class="activeNavBar" href="payment.html" data-i18n="Payment">Payment</a></li>
-                  <li><a href="about-us.html" data-i18n="About">About Us</a></li>
-                  <li><a href="contact-us.html" data-i18n="contact">Contact</a></li>
-                  <li><a href="privacy-policy.html" data-i18n="Privacy">Privacy Policy</a></li>
-                  <li class="position-relative">
-                      <a class="m-0 p-0" href="admin/index3.html" data-i18n="Admin">Admin</a> <i
-                          class="fa-light fa-chevron-down fa-xs"></i>
-                      <div class="dropdownList">
-                          <a href="admin/index3.html" data-i18n="Dashbord">Dashbord</a>
-                          <a href="profile.html" data-i18n="Profile">Profile</a>
-                          <a href="contact-us.html" data-i18n="contact">Contact</a>
-                          <a href="privacy-policy.html" data-i18n="Privacy">Privacy policy</a>
-                          <a href="about.html" data-i18n="About">About-Us</a>
-                          <a href="payment.html" data-i18n="Pricing">Pricing plans</a>
-                      </div>
-                  </li>
-              </ul>
-              <!-- icons -->
-              <div class="iconsnav">
-                  <div class=" d-flex">
-                      <div class="nav-item dropdown">
-                          <button class="dropdown-toggle" type="button" id="languageDropdown" data-i18n="lang" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> en </button>
-                          <div class="dropdown-menu" id="lang" aria-labelledby="languageDropdown">
-                              <button class="dropdown-item toggleTyped" onclick="changeLanguage('en')">English</button>
-                              <button class="dropdown-item toggleTyped" onclick="changeLanguage('ar')">العربية</button>
-                          </div>
-                      </div>
-                      <button class="icon themeicons mx-3">
-                          <i class="fa-light fa-lightbulb fa-lg themeicon btnLight"></i>
-                          <i class="fa-light fa-moon fa-lg themeicon d-none"></i>
-                      </button>
-                      <button class="toggle-sidebar d-lg-none ml-4 p-0">
-                          <i class="fa-light fa-bars-staggered fa-lg"></i>
-                      </button>
-                  </div>
-                  <!-- toogle Sign in Sign up -->
-                  <!-- <a class="signIn" href="login.html">Sign in</a> -->
-                  <!-- <a class="signUp" href="login.html">Sign Up</a> -->
-
-                  <!-- user -->
-                  <a class="icon nav-user d-none d-lg-flex" href="login.html">
-                      <span class="mx-2">hady rabie</span>
-                      <img src="asstesClient/imag/user.png" alt="user">
-                  </a>
-
-              </div>
+             <a href="./contact-us.html" class="sidebar-link">
+                <i class="fa-solid fa-square-phone"></i>
+                <span class="sidebar-link-name" data-i18n="contact"></span>
+             </a>
           </div>
-      </div>
-  </nav>
-  <!-- End  -->
+
+          <h3 class="sidebar-title">
+             <span data-i18n="General"></span>
+          </h3>
+
+          <div class="sidebar-list">
+             <a href="./privacy-policy.html" class="sidebar-link">
+                <i class="fa-solid fa-lock"></i>
+                <span class="sidebar-link-name" data-i18n="Privacy"></span>
+             </a>
+            <button class="icon themeicons sidebar-link">
+                <i class="fa-light fa-lightbulb fa-lg themeicon btnLight"></i>
+                <i class="fa-light fa-moon fa-lg themeicon d-none"></i>
+                <span class="sidebar-link-name" data-i18n="mode"></span>
+            </button>
+             <!-- <a href="#" class="sidebar-link">
+                <i class="fa-solid fa-gear"></i>
+                <span class="sidebar-link-name" data-i18n="Settings"></span>
+             </a>
+
+             <a href="#" class="sidebar-link">
+                <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                <span class="sidebar-link-name" data-i18n="Logout"></span>
+             </a> -->
+          </div>
+       </div>
+
+       <a href="./profile.html" class="sidebar-account">
+          <img src="asstesClient/imag/user.png" alt="sidebar image" class="sidebar-perfil">
+
+          <div class="sidebar-names">
+             <h3 class="sidebar-name">Guest</h3>
+             <span class="sidebar-email">guest@email.com</span>
+          </div>
+
+          <i class="ri-arrow-right-s-line"></i>
+       </a>
+    </div>
+</aside>
+ 
+<!-- Navbar -->
+<nav id="navbar">
+    <div class="container">
+        <div class="rowNav">
+            <!-- logo -->
+            <a href="index.html" class="logo">
+                <img src="asstesClient/imag/Masar.png" alt="">
+            </a>
+            <!-- content nav -->
+            <ul class="item-nav d-none d-lg-flex">
+                <li><a href="index.html" data-i18n="Home">Home</a></li>
+                <li><a class="activeNavBar" href="payment.html" data-i18n="Payment">Payment</a></li>
+                <li><a href="about-us.html" data-i18n="About">About Us</a></li>
+                <li><a href="contact-us.html" data-i18n="contact">Contact</a></li>
+                <li><a href="privacy-policy.html" data-i18n="Privacy">Privacy Policy</a></li>
+                <li class="position-relative">
+                    <a class="m-0 p-0" href="admin/index3.html" data-i18n="Admin">Admin</a> <i
+                        class="fa-light fa-chevron-down fa-xs"></i>
+                    <div class="dropdownList">
+                        <a href="admin/index3.html" data-i18n="Dashbord">Dashbord</a>
+                        <a href="profile.html" data-i18n="Profile">Profile</a>
+                        <a href="contact-us.html" data-i18n="contact">Contact</a>
+                        <a href="privacy-policy.html" data-i18n="Privacy">Privacy policy</a>
+                        <a href="about.html" data-i18n="About">About-Us</a>
+                        <a href="payment.html" data-i18n="Pricing">Pricing plans</a>
+                    </div>
+                </li>
+            </ul>
+            <!-- icons -->
+            <div class="iconsnav">
+                <div class=" d-none d-lg-flex">
+                    <button class="icon themeicons">
+                        <i class="fa-light fa-lightbulb fa-lg themeicon btnLight"></i>
+                        <i class="fa-light fa-moon fa-lg themeicon d-none"></i>
+                    </button>
+                </div>
+                <div class="nav-item dropdown mx-3">
+                    <button class="dropdown-toggle" type="button" id="languageDropdown" data-i18n="lang" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> en </button>
+                    <div class="dropdown-menu" id="lang" aria-labelledby="languageDropdown">
+                        <button class="dropdown-item toggleTyped" onclick="changeLanguage('en')">English</button>
+                        <button class="dropdown-item toggleTyped" onclick="changeLanguage('ar')">العربية</button>
+                    </div>
+                </div>
+                <button class="toggle-sidebar d-lg-none ml-4 p-0">
+                    <i class="fa-light fa-bars-staggered fa-lg"></i>
+                </button>
+                <!-- toogle Sign in Sign up -->
+                <!-- <a class="signIn" href="login.html">Sign in</a> -->
+                <!-- <a class="signUp" href="login.html">Sign Up</a> -->
+
+                <!-- user -->
+                <a class="icon nav-user d-none d-lg-flex" href="login.html">
+                    <span class="mx-2">hady rabie</span>
+                    <img src="asstesClient/imag/user.png" alt="user">
+                </a>
+
+            </div>
+        </div>
+    </div>
+</nav>
+<!-- End  -->
 
     <!-- Start payment -->
     <div class="payment">
